# brewblox-mdns

./: .env  README.md  azure-pipelines.yml  pyproject.toml  tox.ini
brewblox_mdns/: __main__.py  dns_discovery.py
docker/: Dockerfile
test/: test_dns_discovery.py  test_main.py
