[tool.poetry]
name = "brewblox-mdns"
version = "0.2.1"
description = "Autodiscovery of Brewblox devices"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
brewblox-service = "^0.25.0"
aiozeroconf = "^0.1.8"
async-timeout = "^3.0.1"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest-flake8 = "^1.0.4"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
pytest-aiohttp = "^0.3.0"
flake8 = "^3.7.9"
autopep8 = "^1.5"
pytest = "^5.4.1"
brewblox-dev = "^1.4.0"
aresponses = "^2.0.0"
flake8-quotes = "^3.0.0"
asyncmock = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
